--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "connect-mongo": "^1.3.2",
     "core-js": "^2.4.1",
     "crypto-js": "^3.1.7",
+    "dashjs": "^2.5.0",
     "express": "^4.13.3",
     "express-session": "^1.14.0",
+    "fluent-ffmpeg-withgoplength": "^2.1.2",
     "gulp-exec": "^2.1.3",
     "gulp-less": "^3.3.0",
     "gulp-systemjs-builder": "^0.15.0",
@@ -38,6 +40,7 @@
     "mkdirp": "^0.5.1",
     "moment": "^2.18.1",
     "mongoose": "^4.3.5",
+    "mp4box": "^0.3.15",
     "multer": "^1.2.0",
     "ng-scrollreveal": "^2.0.2",
     "ng2-bootstrap": "^1.1.5",
@@ -57,6 +60,7 @@
     "uglify": "^0.1.5",
     "uglify-js": "^2.8.1",
     "winston": "^2.1.1",
+    "xml2js": "^0.4.17",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
